# hermes-android-x

./: .gitignore  .mise.toml  AGENTS.md  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
android/app/: build.gradle.kts
android/app/src/androidTest/kotlin/com/hermesandroid/bridge/: BridgeServerInstrumentedTest.kt  ScreenshotInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/hermesandroid/bridge/accessibility/: ActionExecutor.kt  BridgeAccessibilityService.kt  GestureMath.kt  KeyMap.kt  NodeScope.kt  (+5 more)
android/app/src/main/res/layout/: activity_main.xml  activity_permissions.xml  item_permission.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  preferences.xml
android/gradle/: libs.versions.toml
docs/superpowers/plans/: 2026-06-03-hermes-android-rewrite-01-foundation.md  2026-06-03-hermes-android-rewrite-02-core-ui-read.md  2026-06-03-hermes-android-rewrite-03-capture-media.md  2026-06-03-hermes-android-rewrite-04-system-comms.md  2026-06-03-hermes-android-rewrite-05-notifications-events.md
docs/superpowers/specs/: 2026-06-03-hermes-android-rewrite-design.md
plugin/: SKILL.md  __init__.py  client.py  config.py  media.py  plugin.yaml  skill.md  tools.py
tests/: conftest.py  test_android_resources.py  test_client.py  test_comms.py  test_events.py  test_gestures.py  test_hash.py  test_media.py  test_nodes.py  test_plugin_registration.py  test_screen_record.py  test_screenshot.py  test_system.py  test_tools.py  test_wait.py
(+47 files in other folders)
